Removed unnecessary synchronization. Fixed synchronization. Javadoc.